perf(jvm): encode writeString UTF-8 straight to native memory
The JVM writeString encoded via CharsetEncoder.encode(CharBuffer.wrap(text), byteBuffer).
For a native/FFM destination the JDK uses encodeBufferLoop, which does a
DirectByteBuffer.put(byte) — and therefore a java.nio.Buffer.session() scope check —
for EVERY byte. On FFM-backed buffers that session() check was the #1 JVM CPU cost in
the Autobahn cat-13 profile (send path: writeDataFrameFromCodec -> StringCodec.encode ->
GrowableWriteBuffer.writeString). The websocket frame path uses BufferFactory.deterministic()
= FfmBuffer, so it pays this on every text frame.

Add encodeUtf8ToNative: a hand-rolled UTF-16 -> UTF-8 encoder that writes each scalar's
1-4 bytes straight to the native address via directPutByte (FFM MemorySegment.set on JVM 21+,
Unsafe on 8-20) — no per-byte session() check and no intermediate char[]/byte[]. It's the
write-side mirror of the directGetByte read fast path and of the native simdutf writeString.

- New directPutByte in both DirectUncheckedAccess.kt multi-release variants.
- New Utf8DirectEncode.kt shadow-twin (jvmMain Unsafe / jvm21Main FFM), same pattern as
  directGetByte. BaseJvmBuffer.writeString calls an open tryWriteUtf8ToNative hook, overridden
  by DirectJvmBuffer, FfmBuffer, and FfmAutoBuffer; heap buffers keep the fast encodeArrayLoop.
- REPORT semantics preserved: lone surrogate -> MalformedInputException, overflow ->
  BufferOverflowException before writing past the window.

Validation: StringCharsetParity / WriteStringOverflow / LengthPrefixedString + a new
WriteStringDirectUtf8Test (ascii/2/3/4-byte, surrogate pairs, lone-surrogate throws, deterministic
FFM buffer) all pass on BOTH jvmTest (Direct/Unsafe) and jvmFfmTest (FFM). JMH WriteStringBenchmark
is unchanged on DirectJvmBuffer (a plain allocateDirect buffer has no session() cost, so no regression
and no win there) — the win is on the FFM path only and is confirmed by re-profiling the websocket.